--- a/style.css
+++ b/style.css
@@ -105,8 +105,9 @@ nav .container h2 {
 }
 
 main {
-    height: 100vh;
-    width: 78vw;
+ 
+width: 78vw; 
+height: 490px;
     background-color:#14131a;
     position: absolute;
     top: 80px;
@@ -175,6 +176,8 @@ font-size: 30px;
     left: 850px;
 border-radius: 10px;
 
+
+
 }
 .followbox i{
     
@@ -231,12 +234,17 @@ opacity: 0.9;
 }
 
 .alpha{
+   
     width: 100%;
-    height: 300px;
-    background-color: #14131a;
+    height: 240px;
+    background-color:#14131a;
     display: flex;
     justify-content: start;
     align-items: center;
+    margin-top: 15px;
+  
+ 
+  
 }
 .alpha a{
     text-decoration: none;
@@ -257,7 +265,7 @@ opacity: 0.9;
 }
 .fristbox .img{ height: 130px;
     width: 100%;
- background-image: url(download-youtube-video-thumbnail.jpg);
+ background-image: url(Untitled.png);
  background-size: cover;
  background-position: center;
 border-radius: 15px 15px 0px 0px;
@@ -317,7 +325,7 @@ border-radius: 15px 15px 0px 0px;
     width: 240px;
     transition-delay: 0.1s;
     transition-duration: .3s;
-    box-shadow: 0 0 50px 15px #25c6f2;
+    box-shadow: 0 0 50px 15px #f80b0b;
    
 }
 
@@ -343,5 +351,137 @@ border-radius: 15px 15px 0px 0px;
     transition-duration: .3s;
     box-shadow: 0 0 50px 15px #bd6095;
 }
+
+.nandu h3{
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-left: 20px;
+
+}
+.nandu p{
+    font-size: 0.80rem;
+
+    margin-left: 20px;
+}
+ .mnn{
+    color: white;
+    text-transform: capitalize;
+    font-size: 19px;
+    margin-top: 90px;
+    margin-left: 80px;
+ 
+ }
+
+ .child0{
+    display: flex;
+ justify-content: flex-start;
+    align-items: flex-start;
+    gap: 29px;
+ }
+
+ .ch{
+    height: 340px;
+    width: 215px;
+    background-color:#1c1b23;
+    margin-top: 27px;
+    border-radius: 10px;
+ box-shadow: 20px 0 20px  0 #0e0c0c;
+  
+    
+ }
+ .child1{
+    margin-left: 80px;
+ }
+
+ .ch p{
+    font-size: 20px;
+    color: #89888f;
+    text-transform: capitalize;
+    margin-left: 18px;
+  margin-top: 29px;
+
+ }
+
+
+ .child1 krishna {
+    font-size: .95rem;
+    margin-left: 20px; 
+ line-height: 59px;
+ border: 1px solid red ;
+ padding: 10px;
+ border-radius: 20px;
+ color: white;
+ }
+
+ .child2 krishna {
+    font-size: .95rem;
+    margin-left: 20px; 
+ line-height: 59px;
+ border: 1px solid rgb(33, 111, 255) ;
+ padding: 10px;
+ border-radius: 20px;
+ color: white;
+ }
+
+ .child3 krishna {
+    font-size: .95rem;
+    margin-left: 20px; 
+ line-height: 59px;
+ border: 1px solid rgb(0, 255, 42) ;
+ padding: 10px;
+ border-radius: 20px;
+ color: white;
+ }
+
+ .messi{
+    height: 500px;
+    width: 210px;
+    background-color: #14131a;
+    box-shadow: 10px 0 20px  0 #0e0c0c;
+    position: relative;
+    left: 820px;
+    bottom: 400px;
+    font-size: 21px;
+    color: #ffffff;
+    text-transform: capitalize;
+
+ }
+
+ .messi .p{
+    margin-left: 37px;
+padding-top: 25px;
+ }
+ .messi i {
+    margin-left: 95px;
+    margin-top: 20px;
+
+ }
+
+ .messi  .pa{
+   margin-left: 70px;
+margin-top: 15px;
+ }
+
+ .paa{
+  margin-top: 10px;
+    margin-left: 35px;
+ }
+ .kaa{
+    margin-left: 70px;
+    margin-top: 10px;
+ }
+
+ .raaa{
+    margin-left: 60px;
+    margin-top: 
+    10px;
+ }
+ .eeee{
+    margin-left: 65px;
+    margin-top: 10px;
+    
+ }
+
 
 
